test/langtools/tools/javac/reflect/TestNoCodeReflectionInInnerClasses.out
- compiler.warn.incubating.modules: jdk.incubator.code
TestNoCodeReflectionInInnerClasses.java:12:21: compiler.err.quoted.method.inner.class: TestNoCodeReflectionInInnerClasses.Inner
TestNoCodeReflectionInInnerClasses.java:15:48: compiler.err.quoted.lambda.inner.class: TestNoCodeReflectionInInnerClasses.Inner
TestNoCodeReflectionInInnerClasses.java:19:24: compiler.err.quoted.lambda.inner.class: TestNoCodeReflectionInInnerClasses.Inner
TestNoCodeReflectionInInnerClasses.java:23:48: compiler.err.quoted.mref.inner.class: TestNoCodeReflectionInInnerClasses.Inner
4 errors
1 warning
